Improved visual design and structure.

--- a/src/app/components/note-list/note-list.component.html
+++ b/src/app/components/note-list/note-list.component.html
@@ -1,1 +1,14 @@
-<p>note-list works!</p>
+<div class="main">
+  <div class="search">
+    <p class="control">
+      <input type="text" class="input" placeholder="Search" />
+      <span class="icon">
+        <i class="fas fa-search"></i>
+      </span>
+    </p>
+  </div>
+
+  <div class="notes-list">
+    <app-note-card></app-note-card>
+  </div>
+</div>
