--- a/src/app/components/main-layout/main-layout.component.html
+++ b/src/app/components/main-layout/main-layout.component.html
@@ -1,1 +1,10 @@
-<p>main-layout works!</p>
+<div class="layout-box">
+  <div class="top-bar">
+    <h1>Note</h1>
+  </div>
+
+  <div class="page-content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
