Editing and managing notes

--- a/src/app/components/note-card/note-card.component.html
+++ b/src/app/components/note-card/note-card.component.html
@@ -1,16 +1,20 @@
 <div #container class="note-card">
-  <div class="note-card-content">
-    <h1 class="note-card-title">
-      {{ title }}
-    </h1>
-    <div #bodyText class="note-card-body">
-      <p #noteP>
-        {{ body }}
-      </p>
 
-      <div #truncator class="fade-out-truncation"></div>
+  <a [routerLink]="link">
+    <div class="note-card-content">
+      <h1 class="note-card-title">
+        {{ title }}
+      </h1>
+      <div #bodyText class="note-card-body">
+        <p #noteP>
+          {{ body }}
+        </p>
+  
+        <div #truncator class="fade-out-truncation"></div>
+      </div>
     </div>
-  </div>
+  </a>
 
-  <div class="del-button"></div>
+
+  <div class="del-button" (click)="(onDelButtonClick())"></div>
 </div>
