--- a/src/app/components/main-layout/main-layout.component.scss
+++ b/src/app/components/main-layout/main-layout.component.scss
@@ -25,7 +25,7 @@
   align-items: center;
 
   h1 {
-    color: #6ecbc3;
+    color: #00ecf0;
     font-size: 40px;
     font-weight: 700;
     text-shadow: 1px 1px 2px var(--dark-cyan);
