--- a/src/app/components/note-list/note-list.component.scss
+++ b/src/app/components/note-list/note-list.component.scss
@@ -1,5 +1,5 @@
 .main {
-  max-width: 750px;
+  max-width: 600px;
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -22,11 +22,11 @@
   left: 25px;
   top: 50%;
   transform: translateY(-50%);
-  color: var(--darker-cyan);
+  color: #00ecf0;
 }
 
 .input {
-  min-width: 750px;
+  min-width: 500px;
   text-align: center;
   border: 0;
   outline: 0;
@@ -71,4 +71,30 @@
 app-note-card {
   display: block;
   margin-bottom: 25px;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 500px;
+  height: 40px;
+
+  position: fixed;
+  bottom: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.floating-add-button {
+  border: none;
+  outline: none;
+  border-radius: 25px;
+
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--light-orange);
+
+  box-shadow: 0px 2px 15px 2px #00ecf04d;
+  background: #00ecf0;
 }
