Added animation and search engine

--- a/src/app/components/note-details/note-details.component.scss
+++ b/src/app/components/note-details/note-details.component.scss
@@ -87,7 +87,8 @@
 
 input, textarea {
 
-  text-wrap: wrap;
+  word-wrap: break-word;
+  text-wrap: unrestricted;
   overflow-wrap: break-word;
 
   &.ng-invalid.ng-touched {
