Fixed methods for deleting and filtering notes

--- a/src/app/components/note-details/note-details.component.scss
+++ b/src/app/components/note-details/note-details.component.scss
@@ -87,9 +87,7 @@
 
 input, textarea {
 
-  word-wrap: break-word;
-  text-wrap: unrestricted;
-  overflow-wrap: break-word;
+  white-space: pre-wrap;
 
   &.ng-invalid.ng-touched {
     border: 1px solid #ff4141;
